software-store (0.1.1) karmic; urgency=low

  * fix icon loading/installing
  * add dependency to gnome-menus (LP: #419152)
  * add dependency to python-xapian (LP: #418580)
  * add about dialog
    

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 Aug 2009 15:21:57 +0200

software-store (0.1) karmic; urgency=low

  * Initial release

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 21 Aug 2009 14:52:41 +0200