@@ -4,6 +4,7 @@ software-store (0.1.1) karmic; urgency=low
   * add dependency to gnome-menus (LP: #419152)
   * add dependency to python-xapian (LP: #418580)
   * add about dialog
+  * use gtk-missing-image if no image is available (LP: #418805)
     
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 Aug 2009 15:21:57 +0200
